# ICCT-Aiva2

./: .env.example  .gitignore  README.md  file-list.txt  fix_project.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  wrangler.toml
backend/cpp/: CMakeLists.txt
backend/cpp/include/: calculations.h  hardware_api.h  performance_computing.h
backend/cpp/src/: calculations.cpp  hardware_api.cpp  main.cpp  performance_computing.cpp
backend/java/: pom.xml
backend/python/: requirements.txt  run.py
database/: schema.sql  seeds.sql
database/migrations/: 001_create_users_table.sql  002_create_courses_table.sql  003_create_grades_table.sql  004_create_inquiries_table.sql
my-app/: .eslintrc.cjs  .eslintrc.temp.cjs  README.md  eslint.config.js  eslint.config.js.disabled  package-lock.json  package.json  schema.sql  sona-teacher.sh  tsconfig.app.json  vite.config.ts  wrangler.toml
my-app/lint-backups/: eslint.config.js.disabled  eslint.config.js.temp.bak
my-app/src/: App.tsx  index.css
src/: App.css  App.tsx  index.css
src/config/: api.config.ts  permissions.config.ts  routes.config.ts  theme.config.ts
src/contexts/: AivaContext.tsx  AuthContext.tsx  CourseContext.tsx  GradeContext.tsx  InquiryContext.tsx  NotificationContext.tsx  ThemeContext.tsx
src/hooks/: useAiva.ts  useAsync.ts  useAuth.ts  useAuth.tsx  useCourses.ts  useDebounce.ts  useFaceRecognition.ts  useGrades.ts  useInquiries.ts  useLocalStorage.ts  useNotifications.ts  useProctoring.ts  useTheme.ts
src/pages/: AboutPage.tsx  AchievementsPage.tsx  AuthPage.tsx  (+17 more)
(+300 files in other folders)
